# Proteo-R1

./: .gitattributes  .gitignore  .gitmodules  LICENSE  NOTICE  PLLM_IMPLEMENTATION_REPORT.md  PLLM_INTEGRATION.md  README-zh.md  README.md  design.py  dev_manual.md  environment.yaml  pyproject.toml  requirement.txt  requirements.txt
IgGM/deploy/: ab_design.py  base_designer.py
IgGM/model/: pretrain.py  proteinLLM.py  qwen2_navit.py
IgGM/protein/: __init__.py
IgGM/utils/: __init__.py
api/demo/: decode_latent.py  extract_latent.py
assets/logos/: README.md
assets/team/: README.md
cicd/: README.md  run_traincicd.sh
clean_sft/: test.json  train.py
clean_sft/models/: README.md  __init__.py  configuration_pllm.py  modeling_pllm.py  modeling_pllm_qkv_v2.py  structure_encoder.py
config/: base.yaml
config/dataset/: pdb_850k.yaml  pdb_and_selected10_865k_below8k.yaml  pdb_and_selected_860k.yaml  pdb_and_selected_860k_below8k.yaml  protdt_420k.yaml  protdt_420k_below2k.yaml
config/model/: qwen25_05b.yaml  qwen25_3b.yaml  qwen25_3b_all.yaml  qwen25_3b_frompt_all.yaml  qwen25_3b_proj.yaml
config/trainer/: pt.yaml  sft.yaml
data/: level2_10k_train.jsonl
data/PMC_PDB_DATA/: remaining_pdb_ids.csv
data/ProteinDT/: level1_1k_test.jsonl
data/demo/: README.md
data/demo_canonical_yamls/: 8q7o_A__C.yaml  8r9y_H_L_A.yaml  8slb_H_L_A.yaml  8sxp_H_L_C.yaml  8tg9_H_L_A.yaml
data/demo_gt_structures/: 8Q7O.cif  8R9Y.cif  8SLB.cif  8SXP.cif  8TG9.cif  8q7o_A__C.npz  8r9y_H_L_A.npz  8slb_H_L_A.npz  8sxp_H_L_C.npz  8tg9_H_L_A.npz
data/demo_msa/: 8q7o_A__C_0.npz  8q7o_A__C_1.npz  8r9y_H_L_A_0.npz  8r9y_H_L_A_1.npz  8r9y_H_L_A_2.npz  8slb_H_L_A_0.npz  8slb_H_L_A_1.npz  8slb_H_L_A_2.npz  8sxp_H_L_C_0.npz  8sxp_H_L_C_1.npz  8sxp_H_L_C_2.npz  8tg9_H_L_A_0.npz  8tg9_H_L_A_1.npz  8tg9_H_L_A_2.npz
datapreprocessing/: rcsb_pdb_preprocessing.ipynb
docs/: Makefile  README.md  conf.py  index.rst  requirements.txt
docs/developer_guide/: index.rst  new_dataset_guide.md  new_model_guide.md  new_processor_guide.md  new_trainer_guide.md
docs/getting_started/: index.rst  introduction.rst  quick_start.rst  train.md
docs/models/: bagel.md  index.rst  qwenvl.md
docs/reference/: api.md  design_principle.md  index.rst  mfu.md  video_configuration.md
docs/user_guide/: data_prep.md  datasets.md  index.rst  merge_fsdp.md  peak_perf.md
examples/: inference_demo.py  load_from_config_example.yaml  load_from_pretrained_example.yaml  run.sh
examples/bagel/: example_config.yaml  run.sh
examples/deepcoder/: train_deepcoder_16k.sh
examples/deepprotein/: README.MD  README.md  prepare_protein_data.py  run_deepprotein.py  train_deepprotein.py  train_deepprotein_8k.sh
examples/deepscaler/: __init__.py  run_deepscaler.py
examples/dgn/: run.sh  train_dgn_1b.yaml
examples/diffusion_language_model/: README.md  dllm_train_adam_multi_gpu_deepspeed.yaml  dllm_train_muon_multi_gpu_fsdp2.yaml  dllm_train_muon_single_gpu.yaml  run.sh  run_multigpu.sh
examples/ds_config/: default_config.json
examples/pllm_qwen25/: example_config.yaml  example_config_debug.yaml
examples/qwen2_5_llm/: example_config.yaml  run.sh
examples/qwen2_5_omni/: example_config.yaml  run.sh
examples/qwen2_5_vl/: example_config.yaml  run.sh
examples/qwen3_vl/: example_config.yaml  qwen3_vl_8b_train.sh  run.sh
examples/representation_autoencoder/: reconstruct.py  run.sh  run_rae.sh
examples/scalable_interpolant_transformer/: README.md  run.sh  sit_xl_2.yaml  verify_setup.py
examples/wanvideo/: README.md  run.sh
model/: FINAL_ARCHITECTURE.md  INFERENCE_README.md  README.md  SELF_CONTAINED_MODEL.md  SETUP_COMPLETE.md  TEST_REPORT.md  __init__.py  example.py  foldseek_util.py  inference_example.py  proteinLLM.py  proteinLLM_pllm.py  proteinLLM_train_accelerator.py  protein_encoder.py  protrek_trimodal_model.py  register_pllm.py  simple_inference.py  structure_encoder.py  text_encoder.py  vllm_pllm.py
outputs/: 8hpu_M_N_A_CDR_All_0.fasta  8iv5_A_B_G_0.fasta
proteor1/: __init__.py  _mapping.py
rllm/: globals.py  utils.py
rllm/data/: dataset.py
script/: accelerate_fsdp_fp16.yaml  accelerate_fsdp_fp32.yaml  protrek_embed_pipeline.py  train_prefix_qwen_fsdp_vanilla.py  train_prefix_qwen_fsdp_vanilla_ckf.py
scripts/: Merge_output.ipynb  collect_plot.py  merge_chains.py  multiple_runs.sh
test/: run_suite.py
testing_notebook/: Testing_proteinLLM_multichain.ipynb  Testing_proteinLLM_qkvexport.ipynb  Testing_proteinLLM_qkvexport_v2.ipynb  Testing_saving&loading_hf_format.ipynb
tools/: configure_envs.sh  create_hf_dataset.py  create_json_dataset.py  merge_fsdp.py
(+370 files in other folders)
