[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein_llm"
version = "0.0.1"
description = ""
authors = [
    {name = "", email = ""}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "llamafactory",
    "numpy==1.26.4",
    "transformers==4.52.4",
    "accelerate",
    "peft",
    "python-dotenv",
    "shortuuid",
    "datasets",
    "matplotlib",
    "pyyaml",
    "prettytable",
    "safetensors",
    "accelerate",
    "hydra-core",
    "argdantic",
    "flash-attn>=2.7.2.post1",
    "pynvml",
    "deepspeed",
    "mpi4py",
    "azure-ai-inference", # for deepseek
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
